Fix z-index for overlay menu

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -40,7 +40,7 @@
       cursor: pointer;
       left: 5%;
       top: 2.5%;
-      z-index: 3;
+      z-index: 4;
       animation: rotate 0.5s ease-in-out;
 
       div {
@@ -107,6 +107,7 @@
     .menu-buttons {
       width: 100%;
       height: 100vh;
+      background-color: $color-white;
       background-image: url('../images/background.svg');
       background-repeat: no-repeat;
       background-size: cover;
@@ -115,7 +116,7 @@
       position: fixed;
       align-items: flex-start;
       padding-top: 10%;
-      z-index: 2;
+      z-index: 3;
 
       a {
         margin-top: 10%;
@@ -210,6 +211,7 @@
       display: grid;
       grid-template-columns: 5% 10% 20% 60% 5%;
       z-index: 1;
+
 
       .logo-text {
         position: relative;
